--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Weigang he
+title: Weigang
 email: geoffreyhe2@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  何为刚
+  
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: Geoffrey1014
