--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Weigang
 email: geoffreyhe2@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  
+  Homepage
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: Geoffrey1014
